--- a/docs/env.example
+++ b/docs/env.example
@@ -7,7 +7,9 @@ DATABASE_PATH=./backend/app.db
 #   openssl rand -hex 32
 JWT_SECRET=change-me
 JWT_ISSUER=fifteen-thirty-one
-JWT_TTL_MINUTES=10080
+# Token lifetime in minutes. Prefer shorter values in production (e.g., 60) and
+# override via environment variables / your deployment config.
+JWT_TTL_MINUTES=60
 
 # App environment: development|staging|production
 APP_ENV=development
