--- a/docs/env.example
+++ b/docs/env.example
@@ -3,9 +3,9 @@
 # Backend
 BACKEND_ADDR=127.0.0.1:8080
 DATABASE_PATH=./backend/app.db
-# IMPORTANT: never use "change-me" in production. Generate a strong secret, e.g.:
+# IMPORTANT: set a strong JWT secret before deploying. Generate one, e.g.:
 #   openssl rand -hex 32
-JWT_SECRET=change-me
+JWT_SECRET=REPLACE_ME
 JWT_ISSUER=fifteen-thirty-one
 # Token lifetime in minutes. Prefer shorter values in production (e.g., 60) and
 # override via environment variables / your deployment config.
