--- a/docs/env.example
+++ b/docs/env.example
@@ -5,7 +5,7 @@ BACKEND_ADDR=127.0.0.1:8080
 DATABASE_PATH=./backend/app.db
 # IMPORTANT: set a strong JWT secret before deploying. Generate one, e.g.:
 #   openssl rand -hex 32
-JWT_SECRET=REPLACE_ME
+JWT_SECRET=CHANGE_ME_OR_APP_WILL_NOT_START
 JWT_ISSUER=fifteen-thirty-one
 # Token lifetime in minutes. Prefer shorter values in production (e.g., 60) and
 # override via environment variables / your deployment config.
