--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -18,7 +18,7 @@ reviews:
 
   # High-level summary settings
   high_level_summary: true
-  high_level_summary_instructions: ""
+  high_level_summary_instructions: "In the high level summary, give a description of the langauges used, the frameworks and code patterns used, and then a brief description in 50 words or less."
   high_level_summary_placeholder: "@coderabbitai summary"
   high_level_summary_in_walkthrough: false
 
