--- a/.coderabbit.yml
+++ b/.coderabbit.yml
@@ -154,9 +154,9 @@ chat:
   auto_reply: true
   integrations:
     jira:
-      usage: "global"
+      usage: "enabled"
     linear:
-      usage: "global"
+      usage: "enabled"
 
 knowledge_base:
   opt_out: false
@@ -170,15 +170,15 @@ knowledge_base:
   issues:
     scope: "global"
   jira:
-    usage: "global"
+    usage: "enabled"
     project_keys: []
   linear:
-    usage: "global"
+    usage: "enabled"
     team_keys: []
   pull_requests:
     scope: "global"
   mcp:
-    usage: "global"
+    usage: "enabled"
     disabled_servers: []
 
 issue_enrichment:
